src/webui/src/sass/_general-layout.scss
/* ... */
.sidebar .ng-enter { opacity: 0; transition: all 0.8s ease-in-out; }
.sidebar .ng-enter-active { opacity: 1; }
.sidebar .nav-row.ng-leave, .allele-sidebar .nav-row .ng-leave { transition: none; }
.sidebar { display: flex; flex-direction: column; overflow-y: auto; justify-content: flex-start; min-width: 45rem; position: fixed; left: 1.3rem; bottom: 1.3rem; top: calc(#{$nav-bar-top-height} + #{$nav-bar-secondary-height} + 2rem);
  &::-webkit-scrollbar {
    width: 5px;
  }
  &::-webkit-scrollbar-thumb {
    background-color: $blue-25;
  }
  &:hover::-webkit-scrollbar-thumb {
    background-color: $blue-50;
  }
  section.enabled, section.disabled { flex-basis: auto;  }
  section > div:first-child { margin-top: 2rem; }
  section > div:last-child { margin-bottom: 1rem; }
  h4 { font-family: $slim; font-weight: 600; margin: 0; font-size: 1.4rem; display: flex; justify-content: space-between; }
  h4.section-title { @extend h4.section-title; margin: 0.3rem 0; }
  .variant { width: 100%; padding-left: 0.7rem; height: 2.6rem; line-height: 2.6rem; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
  .variant span { width: 13.0rem; text-overflow: ellipsis; overflow: hidden; margin-left: auto; }
  i { font-weight: 400; font-style: normal; font-size: 1.25rem; margin-right: 1.3rem; flex-basis: 10rem; }
  b { font-weight: 700; color: $black-75; padding: 0 1.3rem; }

  .nav-table { display: table; width: 45rem; border-collapse: collapse; }
  .nav-row { display: table-row; align-items: center; color: $black-50; background-color: inherit; width: 45rem; font-family: $slim; font-size: 1.4rem;
    &.top {border-bottom: 1px solid $black-10;
      &:hover {font-weight: 600; color: $black-50; }
      .cell {font-weight: 600; margin: 0.2rem;
        &:hover {color: $black-75; }
      }
    }
    &.multiple { background-color: $blue-10; }
    &.spacer {height: 0.2rem}
    .cell { display: table-cell; vertical-align: middle; font-weight: 600; padding: 0 0.3rem; transition: all 0.3s ease-in-out; text-overflow: ellipsis; overflow: hidden;
      &.sample-type { max-width: 10rem; font-weight: 400; font-style: normal; font-size: 1.25rem; margin-right: 1.3rem; }
      &.inheritance { max-width: 10rem; font-weight: 400; font-style: normal; font-size: 1.25rem; margin-right: 1.3rem; }
      &.gene { max-width: 10rem; font-weight: 400; font-style: normal; font-size: 1.25rem; margin-right: 1.3rem; }
      &.hgvsc { max-width: 12rem; text-overflow: ellipsis; overflow: hidden; }
      &.consequence { max-width: 10rem;
        &.hit {
          color: $red-75;
        }
      }
      &.classification { max-width: 3rem; padding-left: 1rem; padding-right: 0.5rem; }
      &.tab { max-width: 0.5rem; width: 0.5rem; padding: 0; min-width: 0.5rem; height: 2.6rem; }

      @mixin indicator {
        width: 2rem;
        height: 1.8rem;
        line-height: 1.8rem;
        margin-left: -1px;
      }

      @mixin indicator-hit {
        width: 100%;
        display: flex;
        align-content: center;
        justify-content: center;
        border: 1px solid $black-50;
      }


      $ind-width: 0.4rem;
      &.indicators {
        display: flex;
        height: 2.5rem;
        align-items: center;
        justify-content: center;

        .hom {
          @include indicator;
          .hit {
            @include indicator-hit;
            border-color: lighten($black-50, 5%);
            color: lighten($black-50, 5%);
          }
        }

        .low-qual {
          @include indicator;
          .hit {
            @include indicator-hit;
            border-color: lighten($yellow, 5%);
            color: lighten($yellow, 5%);
          }
        }
        .important-source {
          @include indicator;
          .hit {
            @include indicator-hit;
            border-color: lighten($green-50, 5%);
            color: lighten($green-50, 5%);
          }
        }
        .three-het-ar {
          @include indicator;
          .hit {
            @include indicator-hit;
            border-color: lighten($purple-50, 5%);
            color: lighten($purple-50, 5%);
          }
        }

        .top {
          @include indicator;
          .hit {
            @include indicator-hit;
            border: none;
            color: $black-50;
            &:hover {color: $black-75; }
          }
        }

      }
    }

    &.togglable .cell {
      &.tab { align-items: center; text-align: center; justify-content: center; max-width: 2.6rem; width: 2.6rem; background-color: $black-50; cursor: pointer; }
      &.consequence { max-width: 6.8rem; }  // Steal some width, give it to toggle button
    }
    &.toggled { color: $blue;
      .cell.tab { background-color: $blue; }
    }

    &.disabled { color: $black-25; }
    &:hover { cursor: pointer; color: $black-75; }
    &:hover .tab { background-color: $blue-50; }
    &.active:not(.toggled):hover { cursor: default; }
    &.active , &.active:hover { color: $blue; }
    &.active .tab, &.active:hover .tab { background-color: $blue; }
    .added h5 { margin: 0; font-size: 1.3rem; font-weight: 600; color: white; }
    &.active.toggled {
      &:hover .tab.togglable { background-color: $black-75; }
    }
  }
}
/* ... */

